# solar_image_processing

./: .gitignore  LICENSE  README.md  pyproject.toml
code/: check.py  collect_metadata.py  deconvolve_image.py  download_solar_images.py  environment.yml  preprocess_solar_images.py  preprocessing_aia.py  rename_files.py  solar_image_downloader.py  solar_image_preprocessor.py  solar_image_substitute_finder.py  start_download.py  start_preprocessing.py  utils.py
code/scripts/deprecated/: find_substitutes_for_gaps.py
configs/: pipeline_config.yaml
scripts/: crop_solar_images.py  download_sidc_images.py  download_solar_images.py  parallel_download.py  preprocess_solar_images.py  run_preprocessing.py
src/solar_image_processing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/solar_image_processing/cropping/: solar_image_cropper.py
src/solar_image_processing/downloading/: jsoc_download.py  sidc_downloader.py  solar_image_downloader.py
src/solar_image_processing/preprocessing/: aia_preprocessor.py  hmi_preprocessor.py  preprocess_realtime.py  preprocessing_functions.py  solar_image_preprocessor.py
src/solar_image_processing/psf_deconvolution/: rebin_psf.py
src/solar_image_processing/utils/: helper_functions.py  pipeline_config.py
tests/: test_pipeline.py
unused_code/: environment.yml  helper_functions.py  solar_image_substitute_finder.py
